fixing registrasi
