# src/controllers/registrasi.controller.js
@@ -35,6 +35,7 @@ module.exports.registrasiVisitorController = async (req, res, next) => {
         await models.registrasiModels.createRegistrasi({
             idUser: getUser.id,
             idKendaraan: getBody.idKendaraan,
+            idKios: getBody.idKios,
             namaLengkap: getBody.namaLengkap,
             nik: getBody.nik,
             namaInstansi: getBody.namaInstansi,
@@ -81,6 +82,12 @@ module.exports.registrasiBarangController = async (req, res, next) => {
                 idKendaraan: getBody.idKendaraan,
                 idBarang: getBody.idBarang,
                 idKios: getBody.idKios,
+                namaLengkap: null,
+                nik: null,
+                namaInstansi: null,
+                noPolisi: null,
+                tujuan: null,
+                imageScan: null,
                 imageCam: `${UPLOAD_URL}/${imageCam}`,
                 kodeQr: getBody.kodeQr,
                 tglRegistrasi: getBody.tglRegistrasi,
